added the assigned , internal, external interviews count.