@@ -123,10 +123,19 @@ public class PlacementController {
         }
     }
     @GetMapping("/dashboardcounts")
-    public ResponseEntity<Map<String, Long>> getDashboardCounts() {
-        Map<String, Long> counts = service.getCounts();
+    public ResponseEntity<?> getDashboardCounts(@RequestParam(required = false) String recruiterId) {
+        Map<String, Long> counts;
+
+        // If recruiterId is provided, use it, otherwise fetch counts without filtering by recruiter
+        if (recruiterId != null && !recruiterId.trim().isEmpty()) {
+            counts = service.getCounts(recruiterId);
+        } else {
+            counts = service.getCountsForAll(); // Fetch counts without recruiter-specific filter
+        }
+
         return ResponseEntity.ok(counts);
     }
+
     @GetMapping("/placement/filterByDate")
     public ResponseEntity<List<PlacementDetails>> getPlacementsByDateRange(
             @RequestParam("startDate") @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate startDate,
@@ -139,21 +148,27 @@ public class PlacementController {
     @GetMapping("/dashboardcounts/filterByDate")
     public ResponseEntity<?> getDashboardCountsByDateRange(
             @RequestParam("startDate") @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate startDate,
-            @RequestParam("endDate") @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate endDate) {
+            @RequestParam("endDate") @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate endDate,
+            @RequestParam(required = false) String recruiterId) {
+
+        if (recruiterId == null || recruiterId.trim().isEmpty()) {
+            return ResponseEntity.badRequest()
+                    .body(Map.of("message", "Missing required parameter: recruiterId"));
+        }
+
+        if (endDate.isBefore(startDate)) {
+            logger.warn("End date {} is before start date {}", endDate, startDate);
+            return ResponseEntity.badRequest()
+                    .body(Map.of("message", "End date cannot be before start date"));
+        }
 
         try {
-            if (endDate.isBefore(startDate)) {
-                logger.warn("End date {} is before start date {}", endDate, startDate);
-                return ResponseEntity.badRequest()
-                        .body(Collections.singletonMap("message", "End date cannot be before start date"));
-            }
-
-            Map<String, Long> counts = service.getCountsByDateRange(startDate, endDate);
+            Map<String, Long> counts = service.getCountsByDateRange(startDate, endDate, recruiterId);
 
             if (counts.values().stream().allMatch(count -> count == 0)) {
                 logger.warn("No dashboard data found between {} and {}", startDate, endDate);
                 return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                        .body(Collections.singletonMap("message", "No data found between " + startDate + " and " + endDate));
+                        .body(Map.of("message", "No data found between " + startDate + " and " + endDate));
             }
 
             return ResponseEntity.ok(counts);
@@ -161,9 +176,7 @@ public class PlacementController {
         } catch (Exception e) {
             logger.error("Error fetching dashboard counts between {} and {}", startDate, endDate, e);
             return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Collections.singletonMap("message", "An error occurred while fetching dashboard counts"));
+                    .body(Map.of("message", "An error occurred while fetching dashboard counts"));
         }
     }
-
-
 }
